--- a/index.html
+++ b/index.html
@@ -130,26 +130,102 @@
     .fan-stage{margin-top:-68px}
   }
 
-  /* === MOBILE override (≤560px) — bigger logo + proper fan only === */
+  /* === Mobile-only: bigger logo + proper fanned cards + requested layout (≤560px) === */
   @media (max-width: 560px){
-    .topbar {
-      justify-content: center;
-      padding: 20px 0;
-    }
-    .topbar img {
-      height: 70px;
-      max-width: none;
-      filter: drop-shadow(0 2px 2px rgba(0,0,0,0.2));
-    }
+
+    /* Bigger, centered logo */
+    .topbar { justify-content: center; padding: 20px 0; }
+    .topbar img { height: 70px; max-width: none; filter: drop-shadow(0 2px 2px rgba(0,0,0,0.2)); }
+
+    /* Hide hero CTA and subtle line */
+    .hero .cta,
+    .hero .subtle { display: none; }
+
+    /* Fan of cards on phone */
     .fan-stage{ margin-top:-50px; }
-    .fan .card{
-      height:120px;
-      margin-left:-28px;
-      border-radius:12px;
-    }
+    .fan .card{ height:120px; margin-left:-28px; border-radius:12px; }
     .fan .card.a{ transform:rotate(-10deg); }
     .fan .card.f{ transform:rotate(0deg); z-index:2; }
     .fan .card.k{ transform:rotate(10deg); }
+
+    /* Why Representation Matters: text first, then images neatly */
+    .stat .row{
+      display:flex;
+      flex-direction:column;
+      gap:20px;
+    }
+    .stat .row > div:first-child{
+      width:100%;
+      max-width:100%;
+      text-align:left;
+    }
+    .card-right{
+      order:2;
+      display:grid;
+      grid-template-columns:1fr 1fr; /* two images per row */
+      gap:10px;
+      justify-items:center;
+      width:100%;
+      max-width:100%;
+      margin:0 auto;
+    }
+    .card-right img{
+      width:100%;
+      max-width:160px; /* keeps images from overflowing the column */
+      height:auto;
+      border-radius:12px;
+    }
+
+    /* Features grid ("What Makes Us Different"): 1 column so it fits */
+    .grid4{ grid-template-columns:1fr; gap:12px; }
+    .feature{ padding:14px; border-radius:12px; }
+
+    /* Creator: portrait first, then text; ensure photo fills space */
+    .creator .row{
+      display:flex;
+      flex-direction:column;
+      gap:16px;
+    }
+    .creator .portrait{
+      order:1;
+      width:100%;
+      height:auto;
+      max-height:320px;
+      border-radius:14px;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      overflow:hidden;
+    }
+    .creator .portrait img{
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      border-radius:14px;
+    }
+    .creator .row > div:last-child{ order:2; }
+
+    footer { padding: 18px 0; }
+  }
+
+  /* === FINAL OVERRIDE: Keep "Everyday Learning With Meaning" 3-across on phones === */
+  @media (max-width: 560px){
+    .meaning .cols{
+      grid-template-columns: repeat(3, 1fr) !important; /* force 3 across */
+      gap: 8px;
+    }
+    .meaning .chip{
+      padding: 8px;
+    }
+    .meaning .chip img{
+      width: 100%;
+      max-width: 80px;    /* smaller image so cards fit */
+      height: auto;
+      margin: 0 auto 6px;
+      display: block;
+    }
+    .meaning .chip b{ font-size: .9rem; }
+    .meaning .chip div{ font-size: .8rem; }
   }
 </style>
 </head>
@@ -186,5 +262,105 @@
       </div>
     </div>
   </header>
+
+  <section class="stat">
+    <div class="container row">
+      <div>
+        <div class="big">Why Representation Matters</div>
+        <p>Fewer than <b>10% of children’s books published in the U.S. feature Black characters</b> (Cooperative Children’s Book Center, 2022). HBCUs have long filled the gaps in representation in higher education. <b>ABC University</b> fills that same gap at the very beginning of learning — because legacy starts early.</p>
+      </div>
+      <div class="card-right">
+        <img class="black-card" src="images/Bb_Black.jpg" alt="B is for Black flashcard">
+        <img class="grad" src="images/graduation.jpg" alt="Zerin at Hampton University graduation">
+      </div>
+    </div>
+  </section>
+
+  <section class="meaning">
+    <div class="container">
+      <h3>Everyday Learning With Meaning</h3>
+      <p>ABC University flashcards turn everyday learning into a celebration of identity. Each letter is paired with a word that carries cultural meaning — opening the door for conversations that go beyond ABCs.</p>
+      <div class="cols">
+        <div class="chip">
+          <img src="images/Aa_Africa.png" alt="A is for Africa">
+          <b>Africa</b>
+          <div>Reminding little learners their roots are vast, rich, and global.</div>
+        </div>
+        <div class="chip">
+          <img src="images/Ff_Family.png" alt="F is for Family">
+          <b>Family</b>
+          <div>Honoring the bonds that sustain and uplift them.</div>
+        </div>
+        <div class="chip">
+          <img src="images/Kk_King.jpeg" alt="K is for King">
+          <b>King</b>
+          <div>Reflecting strength, dignity, and leadership in themselves.</div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <h3 style="color:var(--hbcu-green);margin:0 0 8px;font-weight:700;letter-spacing:.2px">What Makes Us Different</h3>
+      <div class="grid4">
+        <div class="feature">
+          <h4>✨ Cultural Pride</h4>
+          <p>Words and imagery that affirm identity and celebrate Black culture.</p>
+        </div>
+        <div class="feature">
+          <h4>🤟 Inclusive ASL Learning</h4>
+          <p>Every letter is paired with an ASL hand sign — illustrated in skin tones that reflect the children and families using them.</p>
+        </div>
+        <div class="feature">
+          <h4>📚 Early Learning Focus</h4>
+          <p>Designed for toddlers, preschoolers, and early readers — supporting letter recognition, language development, and motor skills.</p>
+        </div>
+        <div class="feature">
+          <h4>🎨 Vibrant, Kid‑Friendly Design</h4>
+          <p>Bold colors and playful illustrations that spark curiosity and deeper conversations.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="cta-band">
+    <div class="container" style="text-align:center">
+      <h3>Join the legacy</h3>
+      <p class="subtle" style="color:#f1f1f1">Be the first to know when ABC University launches. Early subscribers receive previews, updates, and special offers.</p>
+      <div class="cta" style="justify-content:center;margin-top:8px">
+        <input type="email" placeholder="Enter your email to get launch updates and early access">
+        <button>Notify Me at Launch</button>
+      </div>
+    </div>
+  </section>
+
+  <section class="creator">
+    <div class="container row">
+      <div class="portrait">
+        <img src="images/Zerin.jpeg" alt="Photo of Zerin, creator of ABC University">
+      </div>
+      <div>
+        <h3 style="margin:0 0 6px;color:var(--hbcu-green);font-weight:700;letter-spacing:.2px">Made by a Dad, Inspired by Legacy</h3>
+        <p>Hi, I’m Zerin — a dad, HBCU graduate, and educator with a background in teaching and public health. My pride in who I am was shaped by my years at <b>Hampton University</b> and by a family legacy where generations before me also attended HBCUs. That experience taught me the power of representation: when you see yourself reflected in your community and in your education, it strengthens your confidence and expands your sense of possibility.</p>
+        <p>But too often, our children don’t get that reflection early enough. That’s why I created <b>ABC University</b> — flashcards that pair letters, ASL hand signs, and images rooted in culture. They’re more than just ABCs; they’re building blocks of pride, identity, and legacy for little learners.</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container foot">
+      <div style="display:flex;align-items:center;gap:10px">
+        <img src="images/ABCUniversity.png" alt="ABC University logo small">
+        <div>© <span id="year"></span> ABC University</div>
+      </div>
+      <div class="subtle">Instagram • TikTok • <a href="mailto:blacklenzphotoz@gmail.com" style="text-decoration:underline;color:#e5e5e5">Email</a></div>
+      <div class="subtle">ABC University is where culture and learning meet.</div>
+    </div>
+  </footer>
+
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
